# Rust-State-Machine

./: CONTRIBUTING.md  Cargo.toml  Makefile.toml  README.md
.github/workflows/: ci.yml  test.yml
examples/async-basic/: Cargo.toml
examples/async-basic/src/: main.rs
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/complex/: Cargo.toml
examples/complex/src/: main.rs
examples/context/: Cargo.toml
examples/context/src/: main.rs
src/: lib.rs
stateflow/: CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml
stateflow/src/: lib.rs
stateflow/tests/: state_machine_test.rs
statemachine/: Cargo.toml
statemachine/tests/: state_machine_test.rs
