[package]
name = "stateflow"
version = "0.3.0"
edition = "2021"
rust-version = "1.81"
authors = ["Hamed M"]
license = "MIT"
description = "A simple and extensible state machine implementation in Rust"
readme = "../README.md"
repository = "https://github.com/Lifestreams-ai/statemachine"
categories = []
keywords = ["fsm", "state-machine", "embedded", "automation", "workflow"]
# hsm

[dependencies]
futures = "0.3"
jsonschema = "0.23"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }