[package]
name = "stateflow"
version = "0.4.0"
edition = "2021"
rust-version = "1.81"
authors = ["Hamed M"]
license = "MIT"
description = "A simple and extensible state machine implementation in Rust"
readme = "../README.md"
repository = "https://github.com/Lifestreams-ai/statemachine"
categories = []
keywords = ["fsm", "state-machine", "embedded", "automation", "workflow"]
# hsm

[dependencies]
futures = "0.3"
jsonschema = "0.29"
log = "0.4"
lru = "0.13"
once_cell = "1.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }