[package]
name = "statemachine"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
authors = ["Hamed M"]
license = "MIT"
description = "A simple and extensible state machine implementation in Rust"
readme = "../README.md"
repository = "https://github.com/Lifestreams-ai/statemachine"
categories = ["state-machine", "embedded", "automation"]
keywords = ["fsm", "statechart", "state-machine", "embedded", "automation"]
# hsm

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }